// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`freezeOptions should return frozen options with consistent properties: frozen 1`] = `
{
  "contextPath": "/",
  "docsHost": true,
  "docsPath": "/documentation",
  "llmsFilesPath": "/llms-files",
  "name": "@jephilli-patternfly-docs/mcp",
  "pfExternal": "https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content",
  "pfExternalAccessibility": "https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility",
  "pfExternalCharts": "https://raw.githubusercontent.com/patternfly/patternfly-react/refs/heads/main/packages/react-charts/src",
  "pfExternalChartsComponents": "https://raw.githubusercontent.com/patternfly/patternfly-react/refs/heads/main/packages/react-charts/src/victory/components",
  "pfExternalChartsDesign": "https://raw.githubusercontent.com/patternfly/patternfly-react/refs/heads/main/packages/react-charts/src/charts",
  "pfExternalDesign": "https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines",
  "pfExternalDesignComponents": "https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components",
  "pfExternalDesignLayouts": "https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/layouts",
  "repoName": "patternfly-mcp",
  "resourceMemoOptions": {
    "fetchUrl": {
      "cacheErrors": false,
      "cacheLimit": 100,
      "expire": 180000,
    },
    "readFile": {
      "cacheErrors": false,
      "cacheLimit": 50,
      "expire": 120000,
    },
  },
  "separator": "

---

",
  "toolMemoOptions": {
    "fetchDocs": {
      "cacheErrors": false,
      "cacheLimit": 15,
      "expire": 60000,
    },
    "usePatternFlyDocs": {
      "cacheErrors": false,
      "cacheLimit": 10,
      "expire": 60000,
    },
  },
  "urlRegex": /\\^\\(https\\?:\\)\\\\/\\\\//i,
  "version": "1.1.0",
}
`;

exports[`options should return specific properties 1`] = `
{
  "DEFAULT_SEPARATOR": "

---

",
  "OPTIONS": {
    "contextPath": "/",
    "docsPath": "/documentation",
    "llmsFilesPath": "/llms-files",
    "name": "@jephilli-patternfly-docs/mcp",
    "pfExternal": "https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content",
    "pfExternalAccessibility": "https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility",
    "pfExternalCharts": "https://raw.githubusercontent.com/patternfly/patternfly-react/refs/heads/main/packages/react-charts/src",
    "pfExternalChartsComponents": "https://raw.githubusercontent.com/patternfly/patternfly-react/refs/heads/main/packages/react-charts/src/victory/components",
    "pfExternalChartsDesign": "https://raw.githubusercontent.com/patternfly/patternfly-react/refs/heads/main/packages/react-charts/src/charts",
    "pfExternalDesign": "https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines",
    "pfExternalDesignComponents": "https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components",
    "pfExternalDesignLayouts": "https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/layouts",
    "repoName": "patternfly-mcp",
    "resourceMemoOptions": {
      "fetchUrl": {
        "cacheErrors": false,
        "cacheLimit": 100,
        "expire": 180000,
      },
      "readFile": {
        "cacheErrors": false,
        "cacheLimit": 50,
        "expire": 120000,
      },
    },
    "separator": "

---

",
    "toolMemoOptions": {
      "fetchDocs": {
        "cacheErrors": false,
        "cacheLimit": 15,
        "expire": 60000,
      },
      "usePatternFlyDocs": {
        "cacheErrors": false,
        "cacheLimit": 10,
        "expire": 60000,
      },
    },
    "urlRegex": /\\^\\(https\\?:\\)\\\\/\\\\//i,
    "version": "1.1.0",
  },
  "PF_EXTERNAL": "https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content",
  "PF_EXTERNAL_ACCESSIBILITY": "https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility",
  "PF_EXTERNAL_CHARTS": "https://raw.githubusercontent.com/patternfly/patternfly-react/refs/heads/main/packages/react-charts/src",
  "PF_EXTERNAL_CHARTS_COMPONENTS": "https://raw.githubusercontent.com/patternfly/patternfly-react/refs/heads/main/packages/react-charts/src/victory/components",
  "PF_EXTERNAL_CHARTS_DESIGN": "https://raw.githubusercontent.com/patternfly/patternfly-react/refs/heads/main/packages/react-charts/src/charts",
  "PF_EXTERNAL_DESIGN": "https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines",
  "PF_EXTERNAL_DESIGN_COMPONENTS": "https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components",
  "PF_EXTERNAL_DESIGN_LAYOUTS": "https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/layouts",
  "RESOURCE_MEMO_OPTIONS": {
    "fetchUrl": {
      "cacheErrors": false,
      "cacheLimit": 100,
      "expire": 180000,
    },
    "readFile": {
      "cacheErrors": false,
      "cacheLimit": 50,
      "expire": 120000,
    },
  },
  "TOOL_MEMO_OPTIONS": {
    "fetchDocs": {
      "cacheErrors": false,
      "cacheLimit": 15,
      "expire": 60000,
    },
    "usePatternFlyDocs": {
      "cacheErrors": false,
      "cacheLimit": 10,
      "expire": 60000,
    },
  },
  "URL_REGEX": /\\^\\(https\\?:\\)\\\\/\\\\//i,
  "freezeOptions": [Function],
  "parseCliOptions": [Function],
}
`;

exports[`parseCliOptions should attempt to parse args with --docs-host flag 1`] = `
{
  "docsHost": true,
}
`;

exports[`parseCliOptions should attempt to parse args with other arguments 1`] = `
{
  "docsHost": false,
}
`;

exports[`parseCliOptions should attempt to parse args without --docs-host flag 1`] = `
{
  "docsHost": false,
}
`;
